force-app/main/default/objects/InvoiceHeader__c/InvoiceHeader__c.object-meta.xml
<CustomObject>
    <description>Invoice or Credit Memo Header.</description>
    <label>Invoice</label>
    <nameField>
        <label>Invoice No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>