force-app/main/default/objects/InvoiceHeader__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales History (Bill-to Customer)</relationshipLabel>
    <relationshipName>Sales_History1</relationshipName>
    <type>Lookup</type>
</CustomField>