force-app/main/default/objects/InvoiceHeader__c/fields/Bill_to_Name2__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Name2__c</fullName>
    <label>Bill-to Name2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>