force-app/main/default/objects/InvoiceHeader__c/fields/Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_State__c</fullName>
    <label>Bill-to State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>