force-app/main/default/objects/InvoiceHeader__c/fields/Currency_Factor__c.field-meta.xml
<CustomField>
    <fullName>Currency_Factor__c</fullName>
    <description>Currency Factor from ERP system - from the day that the Invoice was posted. Can be used to calculate Amounts in local currency.</description>
    <label>Currency Factor</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>