force-app/main/default/objects/InvoiceHeader__c/fields/Customer_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_No__c</fullName>
    <label>Customer Order No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>