force-app/main/default/objects/InvoiceHeader__c/fields/Dimension_1_Code__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1_Code__c</fullName>
    <label>Dimension 1 Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>