force-app/main/default/objects/InvoiceHeader__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>