force-app/main/default/objects/InvoiceHeader__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that is linked to this Invoice or Credit Memo</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales History</relationshipLabel>
    <relationshipName>Sales_History</relationshipName>
    <type>Lookup</type>
</CustomField>