force-app/main/default/objects/InvoiceHeader__c/fields/Package_Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>Package_Tracking_No__c</fullName>
    <label>Package Tracking No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>