force-app/main/default/objects/InvoiceHeader__c/fields/Payment_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Description__c</fullName>
    <label>Payment Terms Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>