force-app/main/default/objects/InvoiceHeader__c/fields/Quote_No__c.field-meta.xml
<CustomField>
    <fullName>Quote_No__c</fullName>
    <label>Quote No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>