force-app/main/default/objects/InvoiceHeader__c/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Returns Quote where Ext. Document Number = Order</description>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>