force-app/main/default/objects/InvoiceHeader__c/fields/Related_Quote__c.field-meta.xml
<CustomField>
    <fullName>Related_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up Order and returns related Quote</description>
    <label>Related Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>