force-app/main/default/objects/InvoiceHeader__c/fields/Related_Quote_v2__c.field-meta.xml
<CustomField>
    <fullName>Related_Quote_v2__c</fullName>
    <formula>Related_Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Quote v2</label>
    <type>Text</type>
</CustomField>