force-app/main/default/objects/InvoiceHeader__c/fields/Sell_to_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Contact_No__c</fullName>
    <label>Sell-to Contact No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>