force-app/main/default/objects/InvoiceHeader__c/fields/Sell_to_State__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_State__c</fullName>
    <label>Sell-to State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>