force-app/main/default/objects/InvoiceHeader__c/fields/Ship_to_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Code__c</fullName>
    <label>Ship-to Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>