force-app/main/default/objects/InvoiceHeader__c/fields/Ship_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Country__c</fullName>
    <label>Ship-to Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>