force-app/main/default/objects/InvoiceHeader__c/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <label>Ship-to Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>