force-app/main/default/objects/InvoiceHeader__c/fields/Shipping_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Agent_Code__c</fullName>
    <label>Shipping Agent Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>