force-app/main/default/objects/InvoiceHeader__c/fields/Total_Amount_incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_incl_VAT__c</fullName>
    <label>Total Amount incl. VAT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>