force-app/main/default/objects/InvoiceHeader__c/fields/Total_Amount_Incl_VAT_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_VAT_Sum__c</fullName>
    <description>Sum of the Total Amount including VAT on the Invoice Lines. Used when the Total Amount Including VAT cannot be transferred from ERP system (when its not available on the Invoice Header).</description>
    <label>Total Amount Incl. VAT</label>
    <summarizedField>InvoiceLine__c.Amount_Including_VAT__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>