force-app/main/default/objects/InvoiceHeader__c/fields/Total_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_LCY__c</fullName>
    <description>Total invoice amount in Local Currency. Calculated by taken the Amount excluding VAT and applying the Currency Factor.</description>
    <label>Total Amount LCY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>