force-app/main/default/objects/InvoiceHeader__c/fields/Total_Amount_LCY_Calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_LCY_Calc__c</fullName>
    <formula>IF(Currency_Factor__c = 0, Total_Amount_Sum__c ,  (Total_Amount_Sum__c / Currency_Factor__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount LCY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>