force-app/main/default/objects/InvoiceHeader__c/fields/Total_Amount_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Sum__c</fullName>
    <description>Sum of Total Amount on Invoice Lines. Used when the Total Amount cannot be transferred directly to the Invoice Header (when its not available in the ERP system)</description>
    <label>Total Amount</label>
    <summarizedField>InvoiceLine__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>