force-app/main/default/objects/InvoiceHeader__c/fields/Your_Reference__c.field-meta.xml
<CustomField>
    <fullName>Your_Reference__c</fullName>
    <label>Your Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>